[package]
name = "smartcalc"
version = "0.1.0"
authors = ["Erhan BARIS <erhanbaris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsmartcalc = { path = "libsmartcalc" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
querystring = "1.1.0"
lazy_static = "*"
urlencoding = "1.3.3"
serde = { version = "1.0", default-features = false }
serde_derive = "1.0.123"

[features]
default = []
debug-rules = ["libsmartcalc/debug-rules"]
webserver = []

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[workspace]
members = [ "libsmartcalc" ]