[package]
name = "smartcalc"
version = "0.1.0"
authors = ["Erhan BARIS <erhanbaris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsmartcalc = { path = "libsmartcalc" }
pretty_env_logger = "0.4"
querystring = "1.1.0"
lazy_static = "*"

serde = { version = "1.0", default-features = false }
serde_derive = "1.0.123"

log = { version = "0.4.14", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "1.3.3"


[dependencies.chrono]
version = "0.4"
default-features = false
features = ["wasmbind", "js-sys", "clock"]

[features]
default = []
debug-rules = ["libsmartcalc/debug-rules"]
webserver = []

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[workspace]
members = [ "libsmartcalc" ]