[package]
name = "smartcalc"
description = "Text based calculator for peoples"
version = "1.0.7"
authors = ["Erhan BARIS <erhanbaris@gmail.com>"]
edition = "2018"
license = "GPL-2.0"
repository = "https://github.com/erhanbaris/smartcalc"
documentation = "https://github.com/erhanbaris/smartcalc"
homepage = "https://github.com/erhanbaris/smartcalc"
readme = "README.md"
keywords = ["calculator", "smartcalc"]
categories = ["calculator", "mathematics", "science", "development-tools", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex =  { version = "1", default-features = false, features = ["std", "unicode"] }
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["rc"] }
serde_json = { version = "1.0.68", default-features = false, features = ["alloc"] }
serde_derive = "1.0.123"
chrono-tz = { version = "0.6.1", default-features = false }
log = { version = "0.4.14", default-features = false }
serde_repr = "0.1.7"
anyhow = { version = "1.0.56", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc-print = "0.1.16"

[features]
default = []
debug-rules = []

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies.rand]
version = "0.7"
features = ["wasm-bindgen"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["wasmbind", "js-sys", "clock"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 16
incremental = true
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true