[package]
name = "libsmartcalc"
version = "0.1.0"
authors = ["Erhan BARIS <erhanbaris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
lazy_static = "*"
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
chrono-tz = "0.4"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.47"
deunicode = "*"
any_ascii = "0.1.7"

[features]
wasmBuild = []
default = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.rand]
version = "0.7"
features = ["wasm-bindgen"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["wasmbind", "js-sys", "clock"]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"