[package]
name = "libsmartcalc"
version = "0.1.0"
authors = ["Erhan BARIS <erhanbaris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex =  { version = "1", default-features = false, features = ["std", "unicode"] }
lazy_static = "*"
mut_static = "5.0.0"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_derive = "1.0.123"
#chrono-tz = { version = "0.4", default-features = false }
log = { version = "0.4.14", default-features = false }
serde_repr = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc-print = "0.1.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.71", default-features = false}
console_error_panic_hook = "0.1.6"
js-sys = "0.3.47"
wee_alloc = "*"
wasm-bindgen-test="*"

[features]
default = []
debug-rules = []

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies.rand]
version = "0.7"
features = ["wasm-bindgen"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["wasmbind", "js-sys", "clock"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 16
incremental = true
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true